Deployment/dev/k8sClusterDepAWSKOPS/modules/BAD_INGRESS_FOR_HOST_FILE_ISSUE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prometheus
  name: grafana-ingress-badfix
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: bad_grafana/$2
spec:
  rules:
    - http:
        paths:
          - path: /bad_grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
